syntax = "proto3";

option java_package = "com.proto.greet";
option java_multiple_files = true;

message SumRequest {
  int32 first_operand = 1;
  int32 second_operand = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message DecomposeIntoPrimesRequest {
  int64 number = 1;
}

message DecomposeIntoPrimesResponse {
  int64 prime_factor = 1;
}

message AverageIntegersRequest {
  int32 number = 1;
}

message AverageIntegersResponse {
  double average = 1;
}

message MaxIntegersRequest {
  int32 number = 1;
}

message MaxIntegersResponse {
  int32 maximum = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc DecomposeIntoPrimes(DecomposeIntoPrimesRequest) returns (stream DecomposeIntoPrimesResponse) {};

  rpc AverageIntegers(stream AverageIntegersRequest) returns (AverageIntegersResponse) {};

  rpc MaxInteger(stream MaxIntegersRequest) returns (stream MaxIntegersResponse) {};
}